--- a/pipelines/pipeline.yml
+++ b/pipelines/pipeline.yml
@@ -9,6 +9,14 @@ groups:
 
       
 shared:
+
+  - &create-direcotr-environment
+    put: environment
+    params:
+      delete_on_failure: true
+      generate_random_name: true
+      terraform_source: bosh-azure-cpi-acceptance-tests/pipelines/assets/director-env
+
   - &prepare-director
     task: prepare-director
     file: pipelines/shared/tasks/prepare-director.yml
@@ -40,21 +48,22 @@ jobs:
     serial: true
     plan:
       - aggregate:
-        - {get: bosh-cpi-release, trigger: false,  resource: bosh-cpi-dev-artifacts, passed: [build-cpi]}
-        - {get: bosh-azure-acceptance-tests, trigger: false}
+        - {get: cpi-release,     trigger: true,  resource: bosh-cpi-dev-artifacts, passed: [build-cpi]}
+        - {get: bosh-release,    trigger: false, resource: bosh-release}
+        - {get: stemcell,        trigger: false, resource: azure-ubuntu-stemcell}
         - {get: bosh-deployment, trigger: false}
         - {get: pipelines,       trigger: false}
         - {get: bosh-cli,        trigger: false}
-      - do:
-        - <<: *prepare-director
-          params:
-            <<: *prepare-director-params
-            OPTIONAL_OPS_FILE: |
-              -o pipelines/shared/assets/ops/remove-hm.yml
-              -o bosh-deployment/external-ip-with-registry-not-recommended.yml
-              -o bosh-deployment/azure/use-managed-disks.yml
-        - <<: *deploy-director
+      - <<: *create-direcotr-environment
+      - <<: *prepare-director
+        params:
+          <<: *prepare-director-params
+          OPTIONAL_OPS_FILE: |
+            -o pipelines/shared/assets/ops/remove-hm.yml
+            -o bosh-deployment/external-ip-with-registry-not-recommended.yml
+      - <<: *deploy-director
       - put: bosh-director-state
+        params: {file: director-state/director.env}
   
 resource_types:
   - name: terraform_type
@@ -107,7 +116,26 @@ resources:
       storage_account_name: {{storage_account_name}}
       storage_access_key:   {{storage_account_access_key}}
       container:            {{dev_artifacts_container_name}}
-      regexp: director.env 
+      regexp: director.env
+
+  - name: environment
+    type: terraform_type
+    source:
+      backend_type: azurerm
+      backend_config:
+        storage_account_name: {{storage_account_name}}
+        container_name: {{environment_container_name}}
+        key: terraform.tfstate
+        access_key: {{storage_account_access_key}}
+        environment: public
+      vars:
+        location:              {{azure_location}}
+        azure_environment:     {{azure_environment}}
+        azure_subscription_id: {{azure_subscription_id}}
+        azure_client_id:       {{azure_client_id}}
+        azure_client_secret:   {{azure_client_secret}}
+        azure_tenant_id:       {{azure_tenant_id}}
+        resource_group_prefix: {{resource_group_prefix}}
       
   - name: version-semver
     type: semver
@@ -124,3 +152,12 @@ resources:
       regexp: bosh-cli-([0-9.]+)-linux-amd64
       bucket: bosh-cli-artifacts
       region_name: us-east-1
+      
+  - name: bosh-release
+    type: bosh-io-release
+    source:
+      repository: cloudfoundry/bosh
+  - name: azure-ubuntu-stemcell
+    type: bosh-io-stemcell
+    source:
+      name: bosh-azure-hyperv-ubuntu-trusty-go_agent
